--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "client": "cd client && npm start",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm install && npm run build",
     "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "express": "^4.18.2",
